--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
-<<<<<<< HEAD
-desktop.ini
+*.pydevproject
+.metadata
+.gradle
 bin/
-=======
-desktop.ini
-bin/
->>>>>>> Week6Su
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# sbteclipse plugin
+.target
+
+# TeXlipse plugin
+.texlipse
+
+build/
+dist/
+sysProps.xml
