--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="var" path="wpilib" sourcepath="wpilib.sources"/>
 	<classpathentry kind="var" path="networktables" sourcepath="networktables.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Tomáš/workspace/jexcelapi_2_6_12/jexcelapi/jxl.jar" sourcepath="C:/Users/Tomáš/workspace/jexcelapi_2_6_12/jexcelapi/src"/>
+	<classpathentry kind="lib" path="C:/Users/Tomáš/workspace/jexcelapi_2_6_12/jexcelapi/jxl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
